# gpg_wrapper

./: README.md  meson.build
data/: com.github.jeremypw.gpg-wrapper.appdata.xml.in  com.github.jeremypw.gpg-wrapper.desktop.in  com.github.jeremypw.gpg-wrapper_decrypt.contract  com.github.jeremypw.gpg-wrapper_encrypt.contract  com.github.jeremypw.gpg_wrapper_decrypt.contract  com.github.jeremypw.gpg_wrapper_encrypt.contract  gpg_wrapper.contract  meson.build
debian/: changelog  control  copyright
po/: POTFILES  com.github.jeremypw.gpg-wrapper.pot  en_GB.po  meson.build
src/: Application.vala  meson.build
